# gr-digitizers

./: .clang-format  .gitignore  .lcovrc  .project  .restyled.yaml  .zenodo.json  CITATION.cff  CMakeLists.txt  MANIFEST.md  README.md  createTarball.sh  createTarball_dependencies.sh  gcovr.cfg  meson.build  meson_options.txt  setup.sh  sonar-project.properties  test_procedure.md
blocklib/digitizers/: BlockScalingOffset.hpp  CMakeLists.txt  block_scaling_offset.h  block_scaling_offset.hpp  enums.yml
blocklib/digitizers/block_demux/: block_demux.yml  block_demux_cpu.cc  block_demux_cpu.h
blocklib/digitizers/block_scaling_offset/: block_scaling_offset.yml  block_scaling_offset_cpu.cc  block_scaling_offset_cpu.h
blocklib/digitizers/block_spectral_peaks/: block_spectral_peaks.yml  (+2 more)
blocklib/fair-picoscope/: CMakeLists.txt  picoscope.hpp
blocklib/helpers/: CMakeLists.txt  HelperBlocks.hpp  helper_blocks.h  helper_blocks.hpp
blocklib/opencmw/: CMakeLists.txt
blocklib/picoscope/: CMakeLists.txt  Picoscope.hpp  Picoscope3000a.hpp  Picoscope4000a.hpp  Picoscope5000a.hpp  Picoscope6000.hpp  PicoscopeAPI.hpp  StatusMessages.hpp  TimingMatcher.hpp  picoscope.hpp  picoscope4000a.hpp  status_messages.hpp
blocklib/picoscope4000a/: CMakeLists.txt  enums.yml  picoscope4000a.cc  picoscope4000a.h  picoscope4000a.hpp  ps_4000a_defs.h  ps_4000a_defs.hpp
blocklib/timing/: CMakeLists.txt  README.md
docs/: CMakeLists.txt  README.digitizers  README.digitizers_39  README.pulsed_power_daq
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
examples/cpp/: CMakeLists.txt  ZMQ_file_sink_interpreter.py  db_to_watt_ff_test.cc  edge_trigger_cli.cc  mains_frequency_calc_test.cc  power_calc_ff_test.cc  power_calc_test.cc  ps3000a_test.cc  ps4000a_plus_low_frequency_spectrum_test.cc  ps4000a_plus_mains_frequency_calc_test.cc  ps4000a_plus_power_calc.cc  ps4000a_plus_power_calc_plus_raw.cc  ps4000a_plus_power_calc_plus_raw_plus_mains_plus_freq_spec_five_zmq.cc  ps4000a_plus_power_calc_plus_raw_plus_mains_plus_freq_spec_five_zmq_ff.cc  ps4000a_plus_power_calc_plus_raw_plus_mains_plus_freq_spec_five_zmq_local.cc  ps4000a_plus_power_calc_plus_raw_three_files.cc  ps4000a_plus_power_calc_plus_raw_three_zmq.cc  ps4000a_plus_power_calc_plus_raw_two_zmq.cc  ps4000a_test.cc  test_tags.cc
gr-picoscope/: CMakeLists.txt  picoscope.h  picoscope.hpp
grc/: CMakeLists.txt  digitizers_39_db_to_watt_ff.block.yml  digitizers_39_digitizers_picoscope_4000a.block.yml.bak  digitizers_39_digitizers_picoscope_4000a.yml.bak  digitizers_39_mains_frequency_calc.block.yml  digitizers_39_picoscope_4000a.xml  digitizers_39_power_calc.block.yml  digitizers_39_power_calc_ff.block.yml  digitizers_aggregation_helper.xml  digitizers_amplitude_phase_adjuster.xml  digitizers_block_aggregation.xml  digitizers_block_amplitude_and_phase.xml  digitizers_block_complex_to_mag_deg.xml  digitizers_block_custom_filter.xml  digitizers_block_demux.xml  digitizers_block_scaling_offset.xml  digitizers_block_spectral_peaks.xml  digitizers_cascade_sink.xml  digitizers_chi_square_fit.xml  digitizers_decimate_and_adjust_timebase.xml  digitizers_demux_ff.xml  digitizers_edge_trigger_ff.xml  digitizers_edge_trigger_receiver_f.xml  digitizers_extractor.xml  digitizers_freq_estimator.xml  digitizers_freq_sink_f.xml  digitizers_function_ff.xml  digitizers_interlock_generation_ff.xml  digitizers_picoscope_3000a.xml  digitizers_picoscope_4000a.xml  digitizers_picoscope_6000.xml  digitizers_post_mortem_sink.xml  digitizers_signal_averager.xml  digitizers_simulation_source.xml  digitizers_stft_algorithms.xml  digitizers_stft_goertzl_dynamic_decimated.xml  digitizers_stream_to_vector_overlay_ff.xml  digitizers_time_domain_sink.xml  digitizers_time_realignment_ff.xml  digitizers_wr_receiver_f.xml  (+9 more)
include/digitizers/: CMakeLists.txt  aggregation_helper.h  amplitude_and_phase_helper.h  amplitude_phase_adjuster.h  api.h  block_aggregation.h  block_amplitude_and_phase.h  block_complex_to_mag_deg.h  block_custom_filter.h  block_demux.h  block_scaling_offset.h  block_spectral_peaks.h  cascade_sink.h  chi_square_fit.h  constants.h  decimate_and_adjust_timebase.h  demux_ff.h  digitizer_block.h  edge_trigger_ff.h  edge_trigger_receiver_f.h  edge_trigger_utils.h  error.h  extractor.h  freq_estimator.h  freq_sink_f.h  function_ff.h  interlock_generation_ff.h  median_and_average.h  peak_detector.h  picoscope_3000a.h  picoscope_4000a.h  picoscope_6000.h  post_mortem_sink.h  range.h  signal_averager.h  simulation_source.h  sink_common.h  status.h  stft_algorithms.h  stft_goertzl_dynamic.h  (+6 more)
lib/: CMakeLists.txt  aggregation_helper_impl.cc  aggregation_helper_impl.h  amplitude_and_phase_helper_impl.cc  amplitude_and_phase_helper_impl.h  amplitude_phase_adjuster_impl.cc  amplitude_phase_adjuster_impl.h  app_buffer.h  block_aggregation_impl.cc  block_aggregation_impl.h  block_amplitude_and_phase_impl.cc  block_amplitude_and_phase_impl.h  block_complex_to_mag_deg_impl.cc  block_complex_to_mag_deg_impl.h  block_custom_filter_impl.cc  block_custom_filter_impl.h  block_demux_impl.cc  block_demux_impl.h  block_scaling_offset_impl.cc  block_scaling_offset_impl.h  block_spectral_peaks_impl.cc  block_spectral_peaks_impl.h  cascade_sink_impl.cc  cascade_sink_impl.h  chi_square_fit_impl.cc  chi_square_fit_impl.h  constants.cc.in  db_to_watt_ff_impl.cc  db_to_watt_ff_impl.h  decimate_and_adjust_timebase_impl.cc  decimate_and_adjust_timebase_impl.h  demux_ff_impl.cc  demux_ff_impl.h  digitizer_block_impl.cc  digitizer_block_impl.h  digitizer_source.cc  edge_trigger_ff_impl.cc  edge_trigger_ff_impl.h  edge_trigger_receiver_f_impl.cc  edge_trigger_receiver_f_impl.h  (+131 more)
python/bindings/: CMakeLists.txt  cmake_install.cmake  db_to_watt_ff_python.cc  mains_frequency_calc_python.cc  opencmw_sink_python.cc  picoscope_4000a_python.cc  picoscope_4000a_source_python.cc  power_calc_cc_python.cc  power_calc_ff_python.cc  power_calc_mul_ph_ff_python.cc  power_calc_python.cc  python_bindings.cc  status_python.cc  tags_python.cc  utils_python.cc
swig/: CMakeLists.txt  digitizers_swig.i
(+454 files in other folders)
