option('enable_testing', type : 'boolean', value : true)
option('enable_cuda', type : 'boolean', value : false)
option('enable_python', type : 'boolean', value : true)

option('enable_picoscope', type : 'boolean', value : true)
option('enable_limesdr', type : 'boolean', value : true)

option('libroot_prefix', type : 'string')
option('libpicoscope_prefix', type : 'string')
option('limesuite_prefix', type : 'string')
